ws_ros2_opencv/log/build_2024-09-18_15-31-23/ros2_opencv/stderr.log
  File "/home/epue/capstone.git/capstone/ws_ros2_opencv/install/ros2_opencv/lib/python3.10/site-packages/ros2_opencv/object_detection.py", line 67
    '''
    ^^^
SyntaxError: expected 'except' or 'finally' block

